Fixed warnings for hello.py, w3c errors on various webpages

--- a/html/templates/Flask.html
+++ b/html/templates/Flask.html
@@ -36,12 +36,16 @@
                             there are little dependency to update and watch for security bugs,
                             cons is that some time you will have to do more work by yourself or increase yourself the list of dependencies by adding plugins.
                             In the case of Flask, its dependencies are:</p>
-                        <li><a href="https://werkzeug.palletsprojects.com/en/2.0.x/"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>Werkzeug</u></a> a WSGI utility library</li>
-                        <li><a href="https://jinja.palletsprojects.com/en/3.0.x/"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>jinja2</u></a> which is its template engine</li>
                         <ul>
-                            <p><br><br>Advantages of Flask: <br><br></p>
+                            <li><a href="https://werkzeug.palletsprojects.com/en/2.0.x/"
+                                   target="_blank" style="color: rgb(0,0,230)"><u>Werkzeug</u></a> a WSGI utility library</li>
+                            <li><a href="https://jinja.palletsprojects.com/en/3.0.x/"
+                                   target="_blank" style="color: rgb(0,0,230)"><u>jinja2</u></a> which is its template engine</li>
+                        </ul>
+
+                        <p><br><br>Advantages of Flask: <br><br></p>
+
+                        <ul>
                             <li> Higher compatibility with latest technologies.</li>
                             <li> Technical experimentation.</li>
                             <li> Easier to use for simple cases.</li>
@@ -50,8 +54,11 @@
                             <li> Easy to build a quick prototype.</li>
                             <li> Routing URL is easy.</li>
                             <li> Easy to develop and maintain applications.</li>
+                        </ul>
 
-                            <p><br><br>Disadvantages of Flask: <br><br></p>
+                        <p><br><br>Disadvantages of Flask: <br><br></p>
+
+                        <ul>
                             <li> Not suitable for big applications.</li>
                             <li> Community.</li>
                             <li> Full-Stack experience.</li>
@@ -59,7 +66,6 @@
                             <li> No login or authentication.</li>
                             <li> ORM.</li>
                             <li> Migrations can be difficult.</li>
-
                         </ul>
                     </div>
                 </div>
@@ -85,28 +91,36 @@
 
                             <h3>Dependencies</h3>
                             <br>
-                            <P>These distributions will be installed automatically when installing Flask.</P>
-                            <li> <a href="https://palletsprojects.com/p/werkzeug/"
+
+                            <p>These distributions will be installed automatically when installing Flask.</p>
+
+                            <ul>
+                                <li> <a href="https://palletsprojects.com/p/werkzeug/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>Werkzeug</u></a> implements WSGI, the standard Python interface between applications and servers.</li>
-                            <li> <a href="https://palletsprojects.com/p/jinja/"
+                                <li> <a href="https://palletsprojects.com/p/jinja/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>Jinja</u></a> is a template language that renders the pages your application serves.</li>
-                            <li> <a href="https://palletsprojects.com/p/markupsafe/"
+                                <li> <a href="https://palletsprojects.com/p/markupsafe/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>MarkupSafe</u></a> comes with Jinja. It escapes untrusted input when rendering templates to avoid injection attacks.</li>
-                            <li> <a href="https://palletsprojects.com/p/itsdangerous/"
+                                <li> <a href="https://palletsprojects.com/p/itsdangerous/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>ItsDangerous</u></a> securely signs data to ensure its integrity. This is used to protect Flask’s session cookie.</li>
-                            <li> <a href="https://palletsprojects.com/p/click/"
+                                <li> <a href="https://palletsprojects.com/p/click/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>Click</u></a> is a framework for writing command line applications. It provides the command and allows adding custom management commands.flask</li>
+                            </ul>
 
                             <br><br><h3>Optional dependencies</h3>
                             <br>
+
                             <p>These distributions will not be installed automatically. Flask will detect and use them if you install them.</p>
-                            <li> <a href="https://pythonhosted.org/blinker/"
+
+                            <ul>
+                                <li> <a href="https://pythonhosted.org/blinker/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>Blinker</u></a> provides support for <a href="https://flask.palletsprojects.com/en/2.0.x/cli/#dotenv"
                                         target="_blank" style="color: rgb(0,0,230)"><u>Signals</u></a>.</li>
-                            <li> <a href="https://github.com/theskumar/python-dotenv#readme"
+                                <li> <a href="https://github.com/theskumar/python-dotenv#readme"
                                         target="_blank" style="color: rgb(0,0,230)"><u>python-dotenv</u></a> enables support for Environment Variables From dotenv when running commands.flask</li>
-                            <li> <a href="https://pythonhosted.org/watchdog/"
+                                <li> <a href="https://pythonhosted.org/watchdog/"
                                         target="_blank" style="color: rgb(0,0,230)"><u>Watchdog</u></a> provides a faster, more efficient reloader for the development server.</li>
+                            </ul>
 
                             <br><br><h3>Virtual environments</h3>
                             <br>
@@ -197,19 +211,17 @@
                     <div class="card-body">
                         <p>Flask is a web application framework written in Python. It is developed by Armin Ronacher, who leads an international group of Python enthusiasts named Pocco.
                             Flask is based on the Werkzeug WSGI toolkit and Jinja2 template engine. Both are Pocco projects.</p>
-                        <li><strong>Classifications: </strong>Web framework</li>
-                        <li><strong>Programming languages used: </strong>Python</li>
-                        <li><strong>Developer: </strong>Armin Ronacher</li>
-
+                        <ul>
+                            <li><strong>Classifications: </strong>Web framework</li>
+                            <li><strong>Programming languages used: </strong>Python</li>
+                            <li><strong>Developer: </strong>Armin Ronacher</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-
-
-
-
-            </div>
         </div>
+    </div>
+</div>
 
 
 
