--- a/html/templates/Prism.html
+++ b/html/templates/Prism.html
@@ -44,18 +44,24 @@
                             but that layers on top of the platform concepts and APIs for navigation
                             so that you can fully leverage what the platform itself has to offer,
                             but done in the MVVM way.<br></p>
+
+                        <p>Advantages of PyCharm: <br><br></p>
+
                         <ul>
-                            <p>Advantages of PyCharm: <br><br></p>
                             <li>A plethora of productive shortcuts.</li>
                             <li> to view the entire Python source code with a single click.</li>
                             <li> of an array of plugins.</li>
+                        </ul>
 
-                            <p><br><br>Disadvantages of PyCharm: <br><br></p>
+                        <p><br><br>Disadvantages of PyCharm: <br><br></p>
+
+                        <ul>
                             <li>The main disadvantage of using PyCharm is, it takes more space than other text</li>
                             <li> The community version is idle for python development only and does not allow to use</li>
                             <li> The professional version is somewhat expensive.</li>
-
                         </ul>
+
+
                     </div>
                 </div>
             </div>
@@ -74,7 +80,7 @@
                         <div class="guide">
                             <h3>Installation on Windows</h3>
                             <br>
-                            <p>To install PRISM on Windows, just run the self-extracting installer which you <a href="http://www.prismmodelchecker.org/download.php"
+                            <p>To install PRISM on Windows, just run the self-extracting installer which you <a href="https://www.prismmodelchecker.org/download.php"
                                         target="_blank" style="color: rgb(0,0,230)"><u>downloaded</u></a>.
                                 You do <strong>not</strong> need administrator privileges for this,
                                 just write-access to the directory chosen for installation.</p>
@@ -174,9 +180,9 @@
                     </div>
                 </div>
             </div>
-
-            </div>
         </div>
+    </div>
+</div>
 
 
 
