--- a/html/templates/Programmer4.html
+++ b/html/templates/Programmer4.html
@@ -2,34 +2,30 @@
 {% block title %}Programmmer4 Archives{% endblock%}
 
 {% block content %}
+    <h1> Code Changes</h1>
 
-<h1> Code Changes</h1>
+    <h1>Progress Update</h1>
 
-<h1>Progress Update</h1>
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="pills-research-tab" data-toggle="pill" href="#pills-research" role="tab" aria-controls="pills-research" aria-selected="true">Research</a></li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-upload-research-tab" data-toggle="pill" href="#pills-upload-research" role="tab" aria-controls="pills-upload-research" aria-selected="false">File Upload Research</a></li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-virus-scanning-files-tab" data-toggle="pill" href="#pills-virus-scan" role="tab" aria-controls="pills-virus-scan" aria-selected="false">Virus Scanning Files</a></li>
+    </ul>
 
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item">
-        <a class="nav-link active" id="pills-research-tab" data-toggle="pill" href="#pills-research" role="tab" aria-controls="pills-research" aria-selected="true">Research</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="pills-upload-research-tab" data-toggle="pill" href="#pills-upload-research" role="tab" aria-controls="pills-upload-research" aria-selected="false">File Upload Research</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="pills-virus-scanning-files-tab" data-toggle="pill" href="#pills-virus-scan" role="tab" aria-controls="pills-virus-scan" aria-selected="false">Virus Scanning Files</a>
-    </li>
-</ul>
-
-<div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-research" role="tabpanel" aria-labelledby="pills-research-tab">
-      <hr/>
-      <strong><a data-toggle="collapse" href="#data-analysis-techniques">Data Analysis Techniques</a></strong>
-      <div id="data-analysis-techniques" class="collapse">
-          <a target="_blank" href="https://careerfoundry.com/en/blog/data-analytics/data-analysis-techniques/">Link</a>
-          <p>Quantative data – anything measurable usually numerical figures and quantities. Ex. Sales figures, website visitors, and percents of revenue increase.<br>
-              Quantative data analysis techniques – focuses on statistical, mathematical, or numerical analysis. Uses algorithms and computational techniques to explain patterns and make predictions<br>
-              Qualitative data – cannot be measured objectively and more open to interpretation. Qualitative data can include comments on a survey, product reviews, and social media posts<br>
-              Qualitative data analysis techniques – makes sense of the unstructured data and is organized into themes.<br>
-              Covers 7 most useful methods of data analysis:</p>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-research" role="tabpanel" aria-labelledby="pills-research-tab">
+            <hr/>
+            <strong><a data-toggle="collapse" href="#data-analysis-techniques">Data Analysis Techniques</a></strong>
+            <div id="data-analysis-techniques" class="collapse">
+                <a target="_blank" href="https://careerfoundry.com/en/blog/data-analytics/data-analysis-techniques/">Link</a>
+                <p>Quantative data – anything measurable usually numerical figures and quantities. Ex. Sales figures, website visitors, and percents of revenue increase.<br>
+                    Quantative data analysis techniques – focuses on statistical, mathematical, or numerical analysis. Uses algorithms and computational techniques to explain patterns and make predictions<br>
+                    Qualitative data – cannot be measured objectively and more open to interpretation. Qualitative data can include comments on a survey, product reviews, and social media posts<br>
+                    Qualitative data analysis techniques – makes sense of the unstructured data and is organized into themes.<br>
+                    Covers 7 most useful methods of data analysis:</p>
           <ul>
               <li>Regression analysis – estimate how one or more variables might impact the dependent variable, in order to identify trends and patterns. This is especially useful for making predictions and forecasting future trends.</li>
               <li>Monte Carlo simulation - a computerized technique used to generate models of possible outcomes and their probability distributions. It considers a range of possible outcomes and then calculates how likely it is that each particular outcome will be realized. Used by data analysts to conduct advanced risk analysis.</li>
@@ -154,10 +150,11 @@
             contains 100 free scans, which refresh every 21 days, but it can be upgraded to 1000, or more as needed for an added cost.</p>
 
         <p>
+
         <ol>
         <li>Sign up for an account and confirm your account using the email they send. Be sure to check your Junk mail folder!</li>
         <li>Grab your X-ApplicationID and your X-Secret Key from your account and record them for later.</li><br>
-        </ol>
+    </ol>
 
         <h3>Python version</h3>
 
