--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -36,9 +36,9 @@
 
                     <a href="{{ url_for('map') }}">GeoMap</a>             	    
 
-                    <a href="{{ url_for('MeetingMinutes') }}">Meeting Minutes</a>
+                    <a href="{{ url_for('meeting_minutes') }}">Meeting Minutes</a>
 
-                    <a href="{{ url_for('DocumentLibrary') }}">Document Library</a>
+                    <a href="{{ url_for('document_library') }}">Document Library</a>
                 </li>
 
                 <li class="active">
@@ -53,7 +53,7 @@
                         </li>
 
                         <li class="active">
-                            <a href="{{ url_for('AccessingData') }}">Accessing Data</a>
+                            <a href="{{ url_for('accessing_data') }}">Accessing Data</a>
                         </li>
                     </ul>
                 </li>
@@ -249,19 +249,19 @@
                     <a href="#devSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Developers</a>
                     <ul class="collapse list-unstyled" id="devSubmenu">
                         <li class="active">
-                            <a href="{{ url_for('Programmer1') }}">Developer 1 - DB</a>
+                            <a href="{{ url_for('programmer1') }}">Developer 1 - DB</a>
                         </li>
                         <li class="active">
-                            <a href="{{ url_for('Programmer2') }}">Developer 2 - KT</a>
+                            <a href="{{ url_for('programmer2') }}">Developer 2 - KT</a>
                         </li>
                         <li class="active">
-                            <a href="{{ url_for('Programmer3') }}">Developer 3 - HS</a>
+                            <a href="{{ url_for('programmer3') }}">Developer 3 - HS</a>
                         </li>
                         <li class="active">
-                            <a href="{{ url_for('Programmer4') }}">Developer 4 - MG</a>
+                            <a href="{{ url_for('programmer4') }}">Developer 4 - MG</a>
                         </li>
                         <li class="active">
-                            <a href="{{ url_for('Programmer5') }}">Developer 5 - BL</a>
+                            <a href="{{ url_for('programmer5') }}">Developer 5 - BL</a>
                         </li>
                     </ul>
                 </li>
@@ -271,7 +271,7 @@
                 </li>
 
                 <li class="active">
-                    <a href="{{ url_for('UsefulResources') }}">Useful Resources</a>
+                    <a href="{{ url_for('useful_resources') }}">Useful Resources</a>
                 </li>
                            
                 <ul class="list-unstyled CTAs">
