--- a/html/templates/home.html
+++ b/html/templates/home.html
@@ -27,18 +27,20 @@
      <p>The main purpose of the website is to throw out as many types of visualization so as to get a big picture of the patterns in the data they uploaded. This big picture will give researchers insights into the relationships between all their data and thus allow them to drill down and choose certain  aspects for deeper analysis.</p>  
 
 <p>For this project we will be using the following:</p>
-<p>
-<li> Ubuntu 21.04 - for development because it is readily available and free</li>
-<li>Python 3.8.5 - its is powerful and well supported</li>
-<li>Flask - simple and easly to learn and deploy JavaScript Framework</li>
-<li>MongoDb - Database that can store unstructure data</li>
-<li>D3.js - wonderful visualization</li>
-<li>DC.js< - interactive visualization</li>
-<li>BootStrap and CSS - simple and effective website display controls</li>
-</p>
+
+   <ul>
+      <li> Ubuntu 21.04 - for development because it is readily available and free</li>
+      <li>Python 3.8.5 - its is powerful and well supported</li>
+      <li>Flask - simple and easily to learn and deploy JavaScript Framework</li>
+      <li>MongoDb - Database that can store unstructured data</li>
+      <li>D3.js - wonderful visualization</li>
+      <li>DC.js< - interactive visualization</li>
+      <li>BootStrap and CSS - simple and effective website display controls</li>
+  </ul>
+
 
 <h1>Warm Up Project</h1>
-<p>For a start, individually, on your own localhost implement the step by step project at http://adilmoujahid.com/posts/2015/01/interactive-data-visualization-d3-dc-python-mongodb/<p>Be careful on how you load the csv file and make sure it has the headers in the mongodb database before proceeding further. Also take note of the comments below the website to ensure the datetime setting match your own. For a start limit the number of fields in the rows to 10,000</p>
+<p>For a start, individually, on your own localhost implement the step by step project at <a href="http://adilmoujahid.com/posts/2015/01/interactive-data-visualization-d3-dc-python-mongodb/" target="_blank">here</a> <p>Be careful on how you load the csv file and make sure it has the headers in the mongodb database before proceeding further. Also take note of the comments below the website to ensure the datetime setting match your own. For a start limit the number of fields in the rows to 10,000</p>
 <p>Next week, we will review the project together. Most of the skills needed for the project are embedded in this project.</p>
 </div>
 {% endblock %}
