--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -131,6 +131,10 @@ ul.CTAs a {
     margin-bottom: 5px;
 }
 
+ol li {
+    padding-bottom: 5px;
+}
+
 a.download {
     background: #fff;
     color: #7386D5;
